fix scroll overflow issue on Firefrox (#1837)

--- a/src/components/nav_drawer/_nav_drawer.scss
+++ b/src/components/nav_drawer/_nav_drawer.scss
@@ -20,7 +20,7 @@
     height: 100%;
 
     &-hasFooter {
-      padding-bottom: $euiSizeXXL;
+      margin-bottom: $euiSizeXXL;
     }
   }
 
@@ -106,7 +106,7 @@
     // No expand toggle on mobile
 
     .euiNavDrawerMenu-hasFooter {
-      padding-bottom: 0;
+      margin-bottom: 0;
     }
 
     .euiNavDrawer__expandButton {
